--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -44,7 +44,7 @@
     vertical-align: middle;
     box-sizing: border-box;
     text-transform: uppercase;
-    border: 4px solid;
+    border: 5px solid;
     width: 75px;
     height: 75px;
     border-radius: 5px;
@@ -56,11 +56,21 @@
     padding: 10px;
     max-width: 580px;
 }
-  
-.Row {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-gap: 5px;
+
+.win-header {
+    color: transparent;
+    font-size: 80px;
+    font-weight: 600;
+    background-clip: text;
+    -webkit-background-clip: text;
+}
+
+.lose-header {
+    color: transparent;
+    font-size: 80px;
+    font-weight: 600;
+    background-clip: text;
+    -webkit-background-clip: text;
 }
 
 input {
